--- a/src/main.scss
+++ b/src/main.scss
@@ -49,29 +49,76 @@ body {
     background-color: lighten($main-bg, 10%);
 
     input {
-      background-color: $main-bg;
-      border: 1px solid $main-txt;
-      border-radius: 5%;
-      padding: 0.5rem;
-      color: $main-txt;
-      margin-left: 0.5rem;
+      @include main-inputs();
     }
 
     button {
-      background-color: $main-bg;
-      border: 1px solid $main-txt;
-      border-radius: 7%;
-      padding: 0.3rem;
-      color: $main-txt;
-      margin-left: 1rem;
-      font-size: 1.1rem;
-      transition: all 0.5s;
+      @include main-form-buttons();
     }
 
     button:hover {
       cursor: pointer;
       background-color: $main-txt;
       color: #fff;
+    }
+  }
+}
+.trade-modal-container {
+  height: 100vh;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.trade-modal-container--active {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.trade-modal-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  position: absolute;
+  border: 1px solid $main-txt;
+  top: 10rem;
+  left: 30%;
+
+  li {
+    padding: 1rem;
+    height: 2rem;
+  }
+
+  li:hover {
+    cursor: pointer;
+  }
+
+  input {
+    @include main-inputs();
+    display: block;
+    margin: 1rem 0;
+  }
+
+  button {
+    @include main-form-buttons();
+    margin-top: 1rem;
+  }
+
+  button:hover {
+    cursor: pointer;
+    background-color: $main-txt;
+    color: #fff;
+  }
+
+  .active-trade-link {
+    color: white;
+    background-color: lighten($main-bg, 10%);
+  }
+
+  &__modal {
+    background-color: lighten($main-bg, 10%);
+    margin-top: -3rem;
+    padding: 1rem;
+
+    h3 {
+      margin-top: -1rem;
     }
   }
 }
